--- a/index.html
+++ b/index.html
@@ -31,15 +31,17 @@
           <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
-      <div id="about-me" class="About-me hidden">
-        <h2>About me:</h2>
-        <p>My name is Ahmed Kerouat.</p>
-        <p>I consider my self as an artist, a developer and a leader.</p>
-        <p>
+      <div id="about-me" class="About-me">
+        <h2 class="hidden-effect">About me:</h2>
+        <p class="hidden About-me-title">My name is Ahmed Kerouat.</p>
+        <p class="hidden">
+          I consider my self as an artist, a developer and a leader.
+        </p>
+        <p class="hidden">
           Currently, I am a senior at Lycée Louis Pasteur Tunis, where I
           specialize in Mathematics and Physics.
         </p>
-        <p>
+        <p class="hidden">
           Outside of my academic endeavors, I indulge in various hobbies.
           Skateboarding, drawing, and engaging in Valorant gaming sessions are
           some of my favorite pastimes. My early creative journey revolved
@@ -50,13 +52,13 @@
           age of 13, I ventured into the world of coding, which has become a
           persistent passion in my life.
         </p>
-        <h3>Why a Gas Mask ?</h3>
-        <p>
+        <h3 class="hidden-effect">Why a Gas Mask ?</h3>
+        <p class="hidden">
           In my artwork and on the Internet I like to depict myself using a gas
           mask. Because it's not who I am that matters, it's the reflection of
           my actions and my philosophy that hold a significance.
         </p>
-        <p>
+        <p class="hidden">
           Our world grapples with numerous issues today, I harness the power of
           art to criticize society and address these problems. In most of my
           work, I aim to evoke strong emotions, intending to shock and, in turn,
@@ -64,24 +66,24 @@
           Morales
         </p>
       </div>
-      <div class="Gas-Cave hidden">
-        <img src="imgs/bg.png" alt="gas-cave" />
-        <p>"The Gas Cave" (2021)</p>
-        <a>
+      <div class="Gas-Cave">
+        <img class="hidden-effect" src="imgs/bg.png" alt="gas-cave" />
+        <p class="hidden">"The Gas Cave" (2021)</p>
+        <a class="hidden">
           Through the render of this 3D Scene I represented how I would see my
           personal lair.
         </a>
       </div>
-      <div id="projects" class="Projects hidden">
-        <h2>Notable Projects:</h2>
-        <p>
+      <div id="projects" class="Projects">
+        <h2 class="hidden-effect">Notable Projects:</h2>
+        <p class="hidden">
           During High school, I had the opportunity to work on multitude of
           coding projects. But here are the most notable ones, each of which
           likely took several months.
         </p>
         <div class="centered-div">
           <div class="right-div-elements right-div">
-            <h3>Somno Ignis (2022)</h3>
+            <h3 class="hidden">Somno Ignis (2022)</h3>
             <a
               href="https://github.com/ahmedkerouat/Somno-Ignis"
               class="github-link"
@@ -90,7 +92,7 @@
               <img
                 src="imgs/Somno-Ignis.png"
                 alt="Somno Ignis Image"
-                class="project-image"
+                class="hidden project-image"
               />
               <span class="github-text">
                 <img
@@ -101,7 +103,7 @@
                 View on GitHub
               </span>
             </a>
-            <p class="description">
+            <p class="description hidden">
               Inspired by a mini-game in Minecraft called BedWars, where the
               goal is to defend your bed against an enemy team, in this video
               game I coded in Python using the Pygame library, you incarnate a
@@ -110,7 +112,7 @@
             </p>
           </div>
           <div class="left-div-elements left-div">
-            <h3>Atom Simulator (2022)</h3>
+            <h3 class="hidden">Atom Simulator (2022)</h3>
             <a
               href="https://github.com/ahmedkerouat/Atom-Simulator"
               class="github-link"
@@ -119,7 +121,7 @@
               <img
                 src="imgs/Atom-Simulator.png"
                 alt="Atom Simulator Image"
-                class="project-image"
+                class="project-image hidden"
               />
               <span class="github-text">
                 <img
@@ -130,7 +132,7 @@
                 View on GitHub
               </span>
             </a>
-            <p class="description">
+            <p class="description hidden">
               This project utilizes a sophisticated sphere packing technique to
               simulate all 118 elements based on the Bohr Model. It provides
               detailed electron configuration information generated in the code
@@ -139,7 +141,7 @@
             </p>
           </div>
           <div class="right-div-elements right-div">
-            <h3>Flow Wizard (2023)</h3>
+            <h3 class="hidden">Flow Wizard (2023)</h3>
             <a
               href="https://github.com/ahmedkerouat/Flow-Wizard"
               class="github-link"
@@ -148,7 +150,7 @@
               <img
                 src="imgs/Flow-Wizard.jpg"
                 alt="Flow Wizard Image"
-                class="project-image"
+                class="project-image hidden"
               />
               <span class="github-text">
                 <img
@@ -159,7 +161,7 @@
                 View on GitHub
               </span>
             </a>
-            <p class="description">
+            <p class="description hidden">
               Powered by the Qt framework, this cross-platform app is designed
               to boost your productivity and streamline your daily routine. You
               have access to 250 motivational quotes, a notepad, a habit
@@ -168,7 +170,7 @@
             </p>
           </div>
           <div class="left-div-elements left-div">
-            <h3>Galaxy Simulator (2023)</h3>
+            <h3 class="hidden">Galaxy Simulator (2023)</h3>
             <a
               href="https://github.com/ahmedkerouat/galaxySimulator"
               class="github-link"
@@ -177,7 +179,7 @@
               <img
                 src="imgs/Galaxy-Simulator.jpg"
                 alt="Galaxy Simulator Image"
-                class="project-image"
+                class="project-image hidden"
               />
               <span class="github-text">
                 <img
@@ -188,17 +190,17 @@
                 View on GitHub
               </span>
             </a>
-            <p class="description">Some stuff to say</p>
+            <p class="description hidden">Some stuff to say</p>
           </div>
         </div>
       </div>
       <div id="artwork" class="Artwork">
-        <h2>Artwork:</h2>
-        <p>
+        <h2 class="hidden-effect">Artwork:</h2>
+        <p class="hidden">
           Throughout my time in high school and middle school, I had the
           opportunity to create a significant amount of artwork.
         </p>
-        <p>
+        <p class="hidden">
           Some of these projects were commissioned and paid, while others were
           personal endeavors. Below, I offer a glimpse of my artistic
           progression over the past few years (2020-2023).
@@ -206,106 +208,176 @@
         <div class="gallery">
           <div class="col-grid">
             <img
+              class="hidden-effect"
               src="imgs/artwork/0.jpg"
               data-title="❝Farewell, My Friend❞ (2023)"
             />
             <img
+              class="hidden-effect"
               src="imgs/artwork/3.jpg"
               data-title="❝A Beacon of Injustice❞ (2023)"
             />
             <img
+              class="hidden-effect"
               src="imgs/artwork/2.jpg"
               data-title="❝Conundrum : Coexistence❞ (2023)"
             />
             <img
+              class="hidden-effect"
               src="imgs/artwork/10.jpg"
               data-title="❝The Knight's Journey : Shattered Reflection❞ (2023)"
             />
           </div>
           <div class="col-grid">
             <img
+              class="hidden-effect"
               src="imgs/artwork/5.jpg"
               data-title="❝The Knight's Journey : Becoming Who You Are❞ (2023)"
             />
             <img
+              class="hidden-effect"
               src="imgs/artwork/4.jpg"
               data-title="❝Too Hard to Stop Drinking Bleach❞ (2023)"
             />
             <img
+              class="hidden-effect"
               src="imgs/artwork/6.jpg"
               data-title="❝Across the Spider-Verse❞ (2023)"
             />
             <img
+              class="hidden-effect"
               src="imgs/artwork/1.jpg"
               data-title="❝How I Met the Monster❞ (2023)"
             />
           </div>
           <div class="col-grid">
             <img
+              class="hidden-effect"
               src="imgs/artwork/7.jpg"
               data-title="❝The Knight's Journey : Conquering Your Monster❞ (2023)"
             />
             <img
+              class="hidden-effect"
               src="imgs/artwork/9.jpg"
               data-title="❝Enslaved by The Monster❞ (2023)"
             />
-            <img src="imgs/artwork/8.png" data-title="❝Remoteness❞ (2023)" />
             <img
+              class="hidden-effect"
+              src="imgs/artwork/8.png"
+              data-title="❝Remoteness❞ (2023)"
+            />
+            <img
+              class="hidden-effect"
               src="imgs/artwork/11.jpg"
               data-title="❝Schrödinger's cat❞ (2023)"
             />
           </div>
           <div class="col-grid">
             <img
+              class="hidden-effect"
               src="imgs/artwork/12.jpg"
               data-title="❝The Purpose Game❞ (2023)"
             />
             <img
+              class="hidden-effect"
               src="imgs/artwork/13.jpg"
               data-title="❝Lost Knowledge❞ (2022)"
             />
-            <img src="imgs/artwork/19.png" data-title="❝Clutter❞ (2022)" />
-            <img src="imgs/artwork/14.png" data-title="❝Mom❞ (2022)" />
+            <img
+              class="hidden-effect"
+              src="imgs/artwork/19.png"
+              data-title="❝Clutter❞ (2022)"
+            />
+            <img
+              class="hidden-effect"
+              src="imgs/artwork/14.png"
+              data-title="❝Mom❞ (2022)"
+            />
           </div>
           <div class="col-grid">
-            <img src="imgs/artwork/16.png" data-title="❝My planet❞ (2022)" />
             <img
+              class="hidden-effect"
+              src="imgs/artwork/16.png"
+              data-title="❝My planet❞ (2022)"
+            />
+            <img
+              class="hidden-effect"
               src="imgs/artwork/15.jpg"
               data-title="❝If unicorns were real..❞ (2022)"
             />
-            <img src="imgs/artwork/18.png" data-title="❝Teddy Bear❞ (2022)" />
             <img
+              class="hidden-effect"
+              src="imgs/artwork/18.png"
+              data-title="❝Teddy Bear❞ (2022)"
+            />
+            <img
+              class="hidden-effect"
               src="imgs/artwork/20-1.png"
               data-title="❝The Knight Beneath the Moon❞ (2022)"
             />
           </div>
           <div class="col-grid">
             <img
+              class="hidden-effect"
               src="imgs/artwork/20-2.png"
               data-title="❝Amidst the Masses❞ (2022)"
             />
-            <img src="imgs/artwork/20.png" data-title="❝The Explorer❞ (2021)" />
-            <img src="imgs/artwork/21.png" data-title="Untitled (2021)" />
-            <img src="imgs/artwork/22.png" data-title="❝Pain cat❞ (2021)" />
-          </div>
-          <div class="col-grid">
-            <img src="imgs/artwork/23.png" data-title="❝Bowling❞ (2021)" />
-            <img src="imgs/artwork/24.png" data-title="❝Squirtle❞ (2021)" />
-            <img src="imgs/artwork/25.png" data-title="❝Skateboard❞ (2021)" />
-          </div>
-          <div class="col-grid">
-            <img src="imgs/artwork/27.png" data-title="Untitled (2021)" />
-            <img src="imgs/artwork/29.png" data-title="Untitled (2021)" />
             <img
+              class="hidden-effect"
+              src="imgs/artwork/20.png"
+              data-title="❝The Explorer❞ (2021)"
+            />
+            <img
+              class="hidden-effect"
+              src="imgs/artwork/21.png"
+              data-title="Untitled (2021)"
+            />
+            <img
+              class="hidden-effect"
+              src="imgs/artwork/22.png"
+              data-title="❝Pain cat❞ (2021)"
+            />
+          </div>
+          <div class="col-grid">
+            <img
+              class="hidden-effect"
+              src="imgs/artwork/23.png"
+              data-title="❝Bowling❞ (2021)"
+            />
+            <img
+              class="hidden-effect"
+              src="imgs/artwork/24.png"
+              data-title="❝Squirtle❞ (2021)"
+            />
+            <img
+              class="hidden-effect"
+              src="imgs/artwork/25.png"
+              data-title="❝Skateboard❞ (2021)"
+            />
+          </div>
+          <div class="col-grid">
+            <img
+              class="hidden-effect"
+              src="imgs/artwork/27.png"
+              data-title="Untitled (2021)"
+            />
+            <img
+              class="hidden-effect"
+              src="imgs/artwork/29.png"
+              data-title="Untitled (2021)"
+            />
+            <img
+              class="hidden-effect"
               src="imgs/artwork/30.jpg"
               data-title="❝The Serpent Devouring Your Soul❞ (2020)"
             />
             <img
+              class="hidden-effect"
               id="last-child"
               src="imgs/artwork/26.png"
               data-title="Untitled (2021)"
             />
-            <div id="contact" class="Contact">
+            <div id="contact" class="Contact hidden">
               <h2>Contact:</h2>
               <h3>
                 <a
