--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
               target="_blank"
             >
               <img
-                src="imgs/Galaxy-Simulator.jpg"
+                src="imgs/GalaxySimulator.png"
                 alt="Galaxy Simulator Image"
                 class="project-image hidden"
               />
@@ -190,7 +190,15 @@
                 View on GitHub
               </span>
             </a>
-            <p class="description hidden">Some stuff to say</p>
+            <p class="description hidden">
+              This project is an n-body-type simulation of a galaxy, employing a
+              compute shader for real-time calculations of gravitational
+              interactions among randomly generated spheres representing stars.
+              Built using OpenGL and GLFW, the simulation provides an
+              environment to observe how gravity, dark matter, dark energy , and
+              a supermassive black hole affect celestial bodies as they move and
+              interact in a virtual space.
+            </p>
           </div>
         </div>
       </div>
