--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
               target="_blank"
             >
               <img
-                src="imgs/GalaxySimulator.png"
+                src="imgs/galaxySimulator.png"
                 alt="Galaxy Simulator Image"
                 class="project-image hidden"
               />
