--- a/index.html
+++ b/index.html
@@ -217,6 +217,11 @@
           <div class="col-grid">
             <img
               class="hidden-effect"
+              src="imgs/artwork/0!.jpg"
+              data-title="❝Fall into the Digital Realm❞ (2023)"
+            />
+            <img
+              class="hidden-effect"
               src="imgs/artwork/0.jpg"
               data-title="❝Farewell, My Friend❞ (2023)"
             />
