add new artwork

--- a/index.html
+++ b/index.html
@@ -216,6 +216,11 @@
         <div class="gallery">
           <div class="col-grid">
             <img
+            class="hidden-effect"
+            src="imgs/artwork/0!!.jpg"
+            data-title="❝The Not so Players of Cards❞ (2023)"
+          />
+            <img
               class="hidden-effect"
               src="imgs/artwork/0!.jpg"
               data-title="❝Fall into the Digital Realm❞ (2023)"
