--- a/index.html
+++ b/index.html
@@ -217,6 +217,11 @@
           <div class="col-grid">
             <img
             class="hidden-effect"
+            src="imgs/artwork/0!!!.jpg"
+            data-title="❝When are you going to laugh?❞ (2023)"
+          />
+            <img
+            class="hidden-effect"
             src="imgs/artwork/0!!.jpg"
             data-title="❝The Not so Players of Cards❞ (2023)"
           />
@@ -230,6 +235,8 @@
               src="imgs/artwork/0.jpg"
               data-title="❝Farewell, My Friend❞ (2023)"
             />
+          </div>
+          <div class="col-grid">
             <img
               class="hidden-effect"
               src="imgs/artwork/3.jpg"
