Add new project

--- a/index.html
+++ b/index.html
@@ -200,6 +200,38 @@
               interact in a virtual space.
             </p>
           </div>
+          <div class="right-div-elements right-div">
+            <h3 class="hidden">Quantum Effects (2024)</h3>
+            <a
+              href="https://github.com/ahmedkerouat/quantum-effects"
+              class="github-link"
+              target="_blank"
+            >
+              <img
+                src="imgs/Quantum-Effects.png"
+                alt="Quantum Effects Image"
+                class="project-image hidden"
+              />
+              <span class="github-text">
+                <img
+                  src="imgs/github-logo.png"
+                  alt="GitHub Logo"
+                  class="github-logo"
+                />
+                View on GitHub
+              </span>
+            </a>
+            <p class="description hidden">
+              This project aims to visually represent quantum phenomena 
+              interactively. It utilizes OpenGL for rendering effects like 
+              wave-particle duality, tunneling, and entanglement. 
+              Users control simulations through a UI, adjusting parameters 
+              like grid visibility and camera settings. The goal is for 
+              users to engage with and comprehend complex quantum 
+              principles rather than to mimic the true 
+              characteristics of quantum particles.
+            </p>
+          </div>
         </div>
       </div>
       <div id="artwork" class="Artwork">
