add new artwork

--- a/index.html
+++ b/index.html
@@ -249,6 +249,11 @@
           <div class="col-grid">
             <img
             class="hidden-effect"
+            src="imgs/artwork/31.jpg"
+            data-title="❝The Rabbit Running Out of Time❞ (2024)"
+          />
+            <img
+            class="hidden-effect"
             src="imgs/artwork/0!!!.jpg"
             data-title="❝When are you going to laugh?❞ (2023)"
           />
@@ -262,13 +267,13 @@
               src="imgs/artwork/0!.jpg"
               data-title="❝Fall into the Digital Realm❞ (2023)"
             />
-            <img
-              class="hidden-effect"
-              src="imgs/artwork/0.jpg"
-              data-title="❝Farewell, My Friend❞ (2023)"
-            />
           </div>
           <div class="col-grid">
+            <img
+            class="hidden-effect"
+            src="imgs/artwork/0.jpg"
+            data-title="❝Farewell, My Friend❞ (2023)"
+          />
             <img
               class="hidden-effect"
               src="imgs/artwork/3.jpg"
