add new artwork

--- a/index.html
+++ b/index.html
@@ -249,6 +249,11 @@
           <div class="col-grid">
             <img
             class="hidden-effect"
+            src="imgs/artwork/32.jpg"
+            data-title="❝The 8-18 Cycle❞ (2024)"
+          />
+            <img
+            class="hidden-effect"
             src="imgs/artwork/31.jpg"
             data-title="❝The Rabbit Running Out of Time❞ (2024)"
           />
