add new artwork

--- a/index.html
+++ b/index.html
@@ -276,6 +276,11 @@
           <div class="col-grid">
             <img
             class="hidden-effect"
+            src="imgs/artwork/33.jpg"
+            data-title="❝Prepare the Canon Event❞ (2024)"
+          />
+            <img
+            class="hidden-effect"
             src="imgs/artwork/0.jpg"
             data-title="❝Farewell, My Friend❞ (2023)"
           />
